Custom Info Window Xibs

--- a/FreshareApp/Info.plist
+++ b/FreshareApp/Info.plist
@@ -57,6 +57,10 @@
 			<false/>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
